force-app/main/default/objects/Consultation__c/fields/Budget_Signals__c.field-meta.xml
<CustomField>
    <fullName>Budget_Signals__c</fullName>
    <label>Budget Signals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>