force-app/main/default/objects/Consultation__c/fields/Concerns_or_Sensitivities__c.field-meta.xml
<CustomField>
    <fullName>Concerns_or_Sensitivities__c</fullName>
    <label>Concerns or Sensitivities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>