force-app/main/default/objects/Consultation__c/fields/Consultation_Status__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Status__c</fullName>
    <label>Consultation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>