force-app/main/default/objects/Consultation__c/fields/Follow_Up_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Due_Date__c</fullName>
    <label>Follow-Up Due Date</label>
    <type>Date</type>
</CustomField>