force-app/main/default/objects/Consultation__c/fields/Key_Themes_and_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Key_Themes_and_Preferences__c</fullName>
    <label>Key Themes and Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>