force-app/main/default/objects/Consultation__c/fields/Next_Step_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Agreed__c</fullName>
    <label>Next Step Agreed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>