force-app/main/default/objects/Consultation__c/fields/Social_Event__c.field-meta.xml
<CustomField>
    <fullName>Social_Event__c</fullName>
    <label>Social Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Consultations</relationshipLabel>
    <relationshipName>Consultations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>