force-app/main/default/objects/Consultation__c/fields/Standard_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Standard_Event_ID__c</fullName>
    <label>Standard Event ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>